<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.view.FormActivity"
android:background="#4A7AEB9A">

    <TextView
            android:text="@string/customer_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_id"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="4dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/text_customer_id"
            app:layout_constraintBottom_toBottomOf="@+id/text_customer_id"
            android:layout_marginStart="8dp"/>

    <TextView
            android:id="@+id/text_customer_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:hint="@string/customer_id"
            android:text="1"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_id"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
            android:id="@+id/edit_name"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/customer_name"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_customer_id"/>

    <EditText
            android:id="@+id/edit_address"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:hint="@string/address" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_name"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:id="@+id/edit_phone"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:maxLength="10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_address"
            android:hint="@string/phone_number"/>
    <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="8dp"
            android:entries="@array/CustomerType"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginStart="8dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.1"
            android:id="@+id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.9"
            android:id="@+id/guideline2"/>

    <Button
            android:id="@+id/button_submit"
            android:text="@string/submit"
            android:layout_width="0dp"
            android:background=""
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/user_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_user_list"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_submit"
            android:layout_marginStart="16dp"
            android:visibility="gone"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_supervisor_account_black_24dp"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#35792E"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>